--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 nostr-sdk = { version = "0.42", features = ["nip59"] }
+log = "0.4"
+env_logger = "0.11"
